--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>dropwizard-jdbi3</artifactId>
             <version>2.1.0-beta.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-client</artifactId>
+            <version>2.1.0-beta.1</version>
+        </dependency>
     </dependencies>
 
     <build>
